# thesis_stub_model

./: Dockerfile  main.py  pyproject.toml  requirements.txt
